# sample-strands-agents-for-data-product-development

./: README.md  config.json  pyproject.toml  requirements.txt
src/: data_product_strands_agents.ipynb  llms.py  prompts.py  toolkit.py  workflow.py
